[gd_scene load_steps=4 format=3 uid="uid://pybfapg0lu5t"]

[ext_resource type="Script" path="res://Scene/Select_Character_Scene/select_char.gd" id="1_qpfqd"]
[ext_resource type="Texture2D" uid="uid://gg6htepm2sl2" path="res://Assets/Button/Pick character/preview.png" id="2_sokbg"]
[ext_resource type="Texture2D" uid="uid://unfnj08m6c8e" path="res://icon.svg" id="9_s05dl"]

[node name="Select_Char" type="Node2D"]
script = ExtResource("1_qpfqd")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1078.0

[node name="Description_Bars" type="VBoxContainer" parent="."]
offset_left = 1080.0
offset_top = 68.0
offset_right = 1811.0
offset_bottom = 472.0

[node name="TopGap" type="MarginContainer" parent="Description_Bars"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Char_Title" type="MarginContainer" parent="Description_Bars"]
layout_mode = 2

[node name="Char_Title" type="Label" parent="Description_Bars/Char_Title"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Schoolmaster"

[node name="MidGap" type="MarginContainer" parent="Description_Bars"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="PlantBar" type="HBoxContainer" parent="Description_Bars"]
layout_mode = 2

[node name="Char_Description" type="MarginContainer" parent="Description_Bars/PlantBar"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Description_Bars/PlantBar/Char_Description"]
layout_mode = 2

[node name="Plant_Knowledge" type="Label" parent="Description_Bars/PlantBar/Char_Description/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Plant Knowledge "

[node name="MidGap" type="MarginContainer" parent="Description_Bars/PlantBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Plant_Numbers" type="MarginContainer" parent="Description_Bars/PlantBar"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Description_Bars/PlantBar/Plant_Numbers"]
layout_mode = 2

[node name="Plant_Numbers" type="Label" parent="Description_Bars/PlantBar/Plant_Numbers/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "85%"

[node name="RightGap" type="MarginContainer" parent="Description_Bars/PlantBar"]
custom_minimum_size = Vector2(310, 0)
layout_mode = 2

[node name="MidGap2" type="MarginContainer" parent="Description_Bars"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="AdaptibilityBar" type="HBoxContainer" parent="Description_Bars"]
layout_mode = 2

[node name="Adapt_Description" type="MarginContainer" parent="Description_Bars/AdaptibilityBar"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Description_Bars/AdaptibilityBar/Adapt_Description"]
layout_mode = 2

[node name="Adapt_Description" type="Label" parent="Description_Bars/AdaptibilityBar/Adapt_Description/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Adaptibility"

[node name="MidGap" type="MarginContainer" parent="Description_Bars/AdaptibilityBar"]
custom_minimum_size = Vector2(218, 0)
layout_mode = 2

[node name="Adaptibility_Numbers" type="MarginContainer" parent="Description_Bars/AdaptibilityBar"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Description_Bars/AdaptibilityBar/Adaptibility_Numbers"]
layout_mode = 2

[node name="Adaptibility_Numbers" type="Label" parent="Description_Bars/AdaptibilityBar/Adaptibility_Numbers/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "70%"

[node name="RightGap" type="MarginContainer" parent="Description_Bars/AdaptibilityBar"]
custom_minimum_size = Vector2(310, 0)
layout_mode = 2

[node name="MidGap3" type="MarginContainer" parent="Description_Bars"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="WisodmBar" type="HBoxContainer" parent="Description_Bars"]
layout_mode = 2

[node name="Wisdom_Description" type="MarginContainer" parent="Description_Bars/WisodmBar"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Description_Bars/WisodmBar/Wisdom_Description"]
layout_mode = 2

[node name="Wisdom_Description" type="Label" parent="Description_Bars/WisodmBar/Wisdom_Description/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Wisdom
"

[node name="MidGap" type="MarginContainer" parent="Description_Bars/WisodmBar"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2

[node name="Wisdom_Numbers" type="MarginContainer" parent="Description_Bars/WisodmBar"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Description_Bars/WisodmBar/Wisdom_Numbers"]
layout_mode = 2

[node name="Wisdom_Numbers" type="Label" parent="Description_Bars/WisodmBar/Wisdom_Numbers/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "90%"

[node name="RightGap" type="MarginContainer" parent="Description_Bars/WisodmBar"]
custom_minimum_size = Vector2(310, 0)
layout_mode = 2

[node name="BottomGap" type="MarginContainer" parent="Description_Bars"]
custom_minimum_size = Vector2(0, 74)
layout_mode = 2

[node name="Pick_char" type="TextureButton" parent="."]
offset_left = 1070.0
offset_top = 478.0
offset_right = 2206.0
offset_bottom = 814.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("2_sokbg")
texture_pressed = ExtResource("2_sokbg")
texture_hover = ExtResource("2_sokbg")

[node name="Char_Pic" type="Sprite2D" parent="."]
position = Vector2(505, 535)
scale = Vector2(0.246086, 0.249537)
texture = ExtResource("9_s05dl")

[node name="Char" type="ScrollContainer" parent="."]
offset_left = 1151.0
offset_top = 580.0
offset_right = 1779.0
offset_bottom = 1031.0
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="Char"]
layout_mode = 2

[node name="Char_Box" type="HBoxContainer" parent="Char/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Char1" type="TextureRect" parent="Char/CenterContainer/Char_Box"]
layout_mode = 2
texture = ExtResource("9_s05dl")

[node name="Char2" type="TextureRect" parent="Char/CenterContainer/Char_Box"]
layout_mode = 2
texture = ExtResource("9_s05dl")

[node name="Char3" type="TextureRect" parent="Char/CenterContainer/Char_Box"]
layout_mode = 2
texture = ExtResource("9_s05dl")

[node name="Char4" type="TextureRect" parent="Char/CenterContainer/Char_Box"]
layout_mode = 2
texture = ExtResource("9_s05dl")

[node name="Char5" type="TextureRect" parent="Char/CenterContainer/Char_Box"]
layout_mode = 2
texture = ExtResource("9_s05dl")

[node name="Char6" type="TextureRect" parent="Char/CenterContainer/Char_Box"]
layout_mode = 2
texture = ExtResource("9_s05dl")

[node name="MarginContainer" type="MarginContainer" parent="Char/CenterContainer/Char_Box"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[connection signal="pressed" from="Pick_char" to="." method="_on_pick_char_pressed"]
[connection signal="gui_input" from="Char/CenterContainer/Char_Box/Char1" to="." method="_on_char_1_gui_input"]
[connection signal="mouse_entered" from="Char/CenterContainer/Char_Box/Char1" to="." method="_on_char_1_mouse_entered"]
[connection signal="mouse_exited" from="Char/CenterContainer/Char_Box/Char1" to="." method="_on_char_1_mouse_exited"]
[connection signal="gui_input" from="Char/CenterContainer/Char_Box/Char2" to="." method="_on_char_2_gui_input"]
[connection signal="mouse_entered" from="Char/CenterContainer/Char_Box/Char2" to="." method="_on_char_2_mouse_entered"]
[connection signal="mouse_exited" from="Char/CenterContainer/Char_Box/Char2" to="." method="_on_char_2_mouse_exited"]
[connection signal="gui_input" from="Char/CenterContainer/Char_Box/Char3" to="." method="_on_char_3_gui_input"]
[connection signal="mouse_entered" from="Char/CenterContainer/Char_Box/Char3" to="." method="_on_char_3_mouse_entered"]
[connection signal="mouse_exited" from="Char/CenterContainer/Char_Box/Char3" to="." method="_on_char_3_mouse_exited"]
[connection signal="gui_input" from="Char/CenterContainer/Char_Box/Char4" to="." method="_on_char_4_gui_input"]
[connection signal="mouse_entered" from="Char/CenterContainer/Char_Box/Char4" to="." method="_on_char_4_mouse_entered"]
[connection signal="mouse_exited" from="Char/CenterContainer/Char_Box/Char4" to="." method="_on_char_4_mouse_exited"]
[connection signal="gui_input" from="Char/CenterContainer/Char_Box/Char5" to="." method="_on_char_5_gui_input"]
[connection signal="mouse_entered" from="Char/CenterContainer/Char_Box/Char5" to="." method="_on_char_5_mouse_entered"]
[connection signal="mouse_exited" from="Char/CenterContainer/Char_Box/Char5" to="." method="_on_char_5_mouse_exited"]
[connection signal="gui_input" from="Char/CenterContainer/Char_Box/Char6" to="." method="_on_char_6_gui_input"]
[connection signal="mouse_entered" from="Char/CenterContainer/Char_Box/Char6" to="." method="_on_char_6_mouse_entered"]
[connection signal="mouse_exited" from="Char/CenterContainer/Char_Box/Char6" to="." method="_on_char_6_mouse_exited"]
